# tv-folder-organizer

./: .env.example  .eslintrc.js  .gitignore  .npmrc  README.md  main.py  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  pyproject.toml  renovate.json  turbo.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  lint.yml  tests.yml
apps/nextjs/: next.config.mjs  package.json  tsconfig.json
apps/nextjs/src/: env.mjs
apps/nextjs/src/components/app/: NavBar.tsx
apps/nextjs/src/components/app/modal/: ConfirmModal.tsx
apps/nextjs/src/components/directory/: DeleteDirectory.tsx  DirectoryCard.tsx  DirectoryList.tsx  FileTree.tsx  NewDirectory.tsx  OrganizeDirectory.tsx
apps/nextjs/src/components/inputs/: ErrorableFormControl.tsx
apps/nextjs/src/components/toasts/: ToastContainer.tsx
apps/nextjs/src/pages/: _app.tsx  _document.tsx  index.tsx
apps/nextjs/src/pages/api/trpc/: [trpc].ts
apps/nextjs/src/theme/: mui.ts
apps/nextjs/src/utils/: api.ts  dayjs.ts  forms.ts  input.ts
src/: organizer.py
tests/: test_organization.py
