[tool.poetry]
name = "tv-magic-organizer"
version = "0.1.0"
description = ""
authors = ["johnvictorfs <37747572+johnvictorfs@users.noreply.github.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
guessit = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.0"
setuptools = "^67.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
